fixed creat post

--- a/src/App.css
+++ b/src/App.css
@@ -495,3 +495,15 @@ input[type="password"] {
 #userNameHomePage {
   margin-top: 1px;
 }
+
+.containerform{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputstyle{
+  display: flex;
+  flex-direction: column;
+}
